# community-garden

./: .dockerignore  .gitignore  README.md  docker-compose.yml  emptygarden.json  pyproject.toml
django/: Dockerfile  docker-entrypoint.sh  requirements.txt
django/communitygarden/: asgi.py  consumers.py  models.py  models2.py  routing.py  settings.py  tasks.py  urls.py  utils.py
django/communitygarden/fixtures/: _generator.py  data.json  emptygarden.json  initialgarden.json  species.json
django/communitygarden/migrations/: 0001_initial.py  0002_connection.py  0003_alter_connection_timestamp.py  0004_alter_soil_water_level.py  0005_auto_20210927_2205.py
svelte/: Dockerfile  entrypoint.sh  package-lock.json  package.json  svelte.config.js
svelte/src/: app.html  test.js
svelte/src/lib/: ClientCursorBox.svelte  CursorBox.svelte  Footer.svelte  Grid.svelte  GridItem.svelte  LoadingOverlay.svelte  Nav.svelte  Overlay.svelte  Settings.svelte  Sidebar.svelte  SocketManager.svelte  store.js  util.js
svelte/src/lib/store/: commands.js  cursor.js  data.js  settings.js  sockets.js  util.js
svelte/src/routes/: __error.svelte  __layout.svelte  index.svelte
svelte/static/: global.css
