[tool.poetry]
authors = ["Addie <addiebarronemail@gmail.com>"]
description = ""
name = "community-garden"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.9"
channels = "^3.0.4"
channels-redis = "^3.3.0"
django-channels-presence = "^1.0.0"
Django = "3.1.5"
django-workers = {git = "https://github.com/addiebarron/django-workers.git", rev = "ignore-apps"}

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
